# agentlens

./: .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  SECURITY.md  SUPPORT.md  action.yml  package.json
.github/: PULL_REQUEST_TEMPLATE.md
docs/: AGENT_REGRESSION_PR.md  AGENT_REVIEW.md  API.md  ARCHITECTURE.md  DASHBOARD_REVIEW.md  DEMO_RECORDING.md  GITHUB_ACTION.md  JSONL_TRACES.md  LANGGRAPH_ADAPTER.md  LAUNCH_COPY.md  LAUNCH_PLAN.md  LAUNCH_POST.md  LLM_SDK_COOKBOOK.md  MARKET_ANALYSIS.md  MCP_ADAPTER.md  MCP_RISK_EXCEPTIONS.md  MULTI_AGENT_ADAPTERS.md  NPM_PUBLISHING.md  OTEL_EXPORT.md  PR_COMMENT_EXAMPLE.md  PYTHON_FRAMEWORK_COOKBOOK.md  PYTHON_PUBLISHING.md  PYTHON_TRACE_WRITER.md  QUICKSTART_ARTIFACTS.md  REDACTION.md  RELEASE_CHECKLIST.md  RELEASE_NOTES_V0.4.0.md  ROADMAP.md  RUN_BUNDLES.md  SCHEMAS.md  SECURITY_SCAN.md
evals/: default.json  langgraph-basic.json  llm-basic.json  mcp-policy.json  multi-agent-basic.json
examples/: autogen-style-run.mjs  basic-run.mjs  crewai-style-run.mjs  failing-run.mjs  jsonl-run.mjs  langgraph-style-run.mjs  llm-wrapper-run.mjs  mcp-stdio-run.mjs  mcp-stdio-server.mjs  mcp-tool-run.mjs  provider-adapters-run.mjs  python-async-run.py  python-basic-run.py  python-framework-cookbook-run.py  python-langchain-fixture-run.py
python/agentlens-trace/: README.md  pyproject.toml
python/agentlens-trace/src/agentlens_trace/: __init__.py  __main__.py
python/agentlens-trace/src/agentlens_trace/adapters/: __init__.py  __main__.py
scripts/: check-npm-publish.mjs  (+13 more)
(+68 files in other folders)
