[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agentlens-trace"
version = "0.4.0"
description = "Zero-dependency Python trace writer for AgentLens."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "Apache-2.0" }
authors = [
  { name = "AgentLens contributors" }
]
keywords = ["ai-agent", "llm", "observability", "evals", "trace"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Software Development :: Testing",
  "Topic :: System :: Logging"
]

[project.urls]
Homepage = "https://github.com/cnqiujunhu-dev/agentlens"
Documentation = "https://github.com/cnqiujunhu-dev/agentlens/blob/main/docs/PYTHON_TRACE_WRITER.md"
Issues = "https://github.com/cnqiujunhu-dev/agentlens/issues"

[tool.setuptools.packages.find]
where = ["src"]
